# SDL2Mario

./: CMakeLists.txt  README.md
src/: Mario.cpp  Mario.h  Utils.cpp  Utils.h  main.cpp
